--- a/courses/ROS/css/custom.css
+++ b/courses/ROS/css/custom.css
@@ -20,8 +20,8 @@
   text-decoration: underline;
 }
 .margin-top-10px{
-    margin: 10px 0px 0px 0px;
-    display: block;
+  margin: 10px 0px 0px 0px;
+  display: block;
 }
 .display-flex{
   display: flex;
@@ -30,4 +30,7 @@
 }
 .img-width-600px{
   width: 600px;
+}
+.italic{
+  font-style: italic;
 }
